# polars-use

./: Cargo.toml  rustfmt.toml
polars-app/: Cargo.toml
polars-app/src/: expression.rs  main.rs
polars-rw/: Cargo.toml
polars-rw/examples/: fold.rs  merge_df.rs
polars-rw/src/: expression.rs  fold_fn.rs  lib.rs  merge.rs
utils/: Cargo.toml
